Añadir carpeta img y vídeo en index desde youtube

--- a/index_megha.html
+++ b/index_megha.html
@@ -67,10 +67,11 @@
         <section class="hero-area">
             <div class="video">
                 <!-- <video width="100%" autoplay loop class="fillWidth"> -->
-                <video width="100%" autoplay loop class="fillWidth">
+                <!-- <video width="100%" autoplay loop class="fillWidth">
                     <source src="nosotros.mp4" type="video/mp4">
                     Tu navegador no soporta la reproduccióncde vídeos.
-                </video>
+                </video> -->
+                <iframe width="100%" height="650" src="https://www.youtube.com/embed/ospeP9CQl1s?autoplay=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
             <div class="block">
                 <!--<div class="video-button">
